--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div class="container">
       <h1>Peek-a-boo</h1>
       <p><strong>Peek-a-boo</strong> is an ancient game riddled in mystery and deceit. Though it appears to be an innocent childrens' pastime, you may change your mind when you learn of its treacherous history.</p>
-
+      <button type="button" class="btn btn-primary" name="button" id="fade-in">Fade In</button>
+      <button type="button" class="btn btn-primary"  name="button" id="fade-out">Fade Out</button>
       <div class="initially-hidden">
         <p>Let's play peek-a-boo. <span class="clickable">Click here</span> to see the surprise!</p>
       </div>
